WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191733
REGRESSION (
r238090
) Composited iframes that resize from zero don't show
https://bugs.webkit.org/show_bug.cgi?id=191733
Summary
REGRESSION (r238090) Composited iframes that resize from zero don't show
Simon Fraser (smfr)
Reported
2018-11-15 20:51:12 PST
Composited iframes that resize from zero don't show
Attachments
Patch
(6.53 KB, patch)
2018-11-15 20:55 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-11-15 20:55:42 PST
Created
attachment 355020
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-11-15 20:55:44 PST
<
rdar://problem/46107764
>
WebKit Commit Bot
Comment 3
2018-11-15 21:29:52 PST
Comment on
attachment 355020
[details]
Patch Clearing flags on attachment: 355020 Committed
r238269
: <
https://trac.webkit.org/changeset/238269
>
WebKit Commit Bot
Comment 4
2018-11-15 21:29:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug